# api/wallet/request_body.go
@@ -1,0 +1,6 @@
+package wallet
+
+type FundWallet struct {
+	UserID string  `json:"user_id"`
+	Amount float64 `json:"amount"`
+}
