# api/wallet/router.go
@@ -1,0 +1,9 @@
+package wallet
+
+import "github.com/go-chi/chi/v5"
+
+var Routes = chi.NewRouter()
+
+func init() {
+	Routes.Post("/fund", Found)
+}
