# docs/swagger.json
@@ -153,14 +153,80 @@
                     }
                 }
             }
+        },
+        "/api/wallets/fund": {
+            "post": {
+                "description": "Fund user Wallet",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "wallets"
+                ],
+                "summary": "Fund User Wallet",
+                "parameters": [
+                    {
+                        "description": "Fund Wallet Data",
+                        "name": "Request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/wallet.FundWallet"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/model.Transactions"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
+        "model.Transactions": {
+            "type": "object",
+            "properties": {
+                "amount": {
+                    "type": "number"
+                },
+                "created_at": {
+                    "type": "string"
+                },
+                "description": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "reference_id": {
+                    "type": "string"
+                },
+                "updated_at": {
+                    "type": "string"
+                },
+                "user": {
+                    "$ref": "#/definitions/model.Users"
+                },
+                "user_id": {
+                    "type": "string"
+                }
+            }
+        },
         "model.Users": {
             "type": "object",
             "properties": {
                 "age": {
                     "type": "integer"
+                },
+                "balance": {
+                    "type": "number"
                 },
                 "created_at": {
                     "type": "string"
@@ -213,6 +279,17 @@
                     "type": "string",
                     "default": "John Updated",
                     "example": "John Updated"
+                }
+            }
+        },
+        "wallet.FundWallet": {
+            "type": "object",
+            "properties": {
+                "amount": {
+                    "type": "number"
+                },
+                "user_id": {
+                    "type": "string"
                 }
             }
         }
